<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/introduction_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:horizontalSpacing="4dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorIntro"
    android:stretchMode="columnWidth"
    android:verticalSpacing="4dp"
    android:weightSum="1">

    <TextView
        android:text="@string/intro_baby_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_weight="5" />

    <EditText
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/intro_baby_name"
        android:ems="10" />

    <TextView
        android:text="@string/intro_baby_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_weight="5" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/intro_baby_gender"
        android:checkedButton="@+id/radioButton_male"
        android:layout_weight="5">
        <RadioButton
        android:text="@string/intro_baby_gender_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton_male" />

        <RadioButton
            android:text="@string/intro_baby_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton_female"
            />
    </RadioGroup>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/intro_baby_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/intro_baby_birth"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_weight="5" />

    <!--<DatePicker-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="163dp"-->
        <!--android:datePickerMode="spinner"-->
        <!--android:calendarViewShown="false"-->
        <!--android:spinnersShown="true"-->
        <!--android:id="@+id/datePicker2" />-->

    <!--<TextView-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:text="@string/intro_baby_height"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/textView5"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat"-->
        <!--android:layout_weight="5" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        >

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/intro_baby_height"
        android:layout_weight="1" />
        <TextView
            android:text="@string/intro_baby_cm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_weight="3" />
    </LinearLayout>

    <Button
        android:text="@string/intro_send"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/intro_send"
        android:layout_weight="5" />

</LinearLayout>
